--- a/ProjetoMVC01/Projeto.Presentation.Mvc/Projeto.Presentation.Mvc.csproj
+++ b/ProjetoMVC01/Projeto.Presentation.Mvc/Projeto.Presentation.Mvc.csproj
@@ -6,9 +6,14 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Controllers\" />
-    <Folder Include="Views\" />
-    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Projeto.Repository\Projeto.Repository.csproj" />
   </ItemGroup>
 
 </Project>
