--- a/ProjetoMVC01/Projeto.Presentation.Mvc/Projeto.Presentation.Mvc.csproj
+++ b/ProjetoMVC01/Projeto.Presentation.Mvc/Projeto.Presentation.Mvc.csproj
@@ -2,11 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <StartupObject>Projeto.Presentation.Mvc.Program</StartupObject>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
