--- a/ProjetoMVC02/Projeto.Presentation.Mvc/Projeto.Presentation.Mvc.csproj
+++ b/ProjetoMVC02/Projeto.Presentation.Mvc/Projeto.Presentation.Mvc.csproj
@@ -9,6 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="itext7" Version="7.1.12" />
+    <PackageReference Include="iTextSharp" Version="5.5.13.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
