--- a/ProjetoAPI/Projeto.Presentation.Api/appsettings.json
+++ b/ProjetoAPI/Projeto.Presentation.Api/appsettings.json
@@ -1,10 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "ProjetoAPI": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ProjetoAPI;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  }
 }
