--- a/ProjetoAPI02/Projeto.Presentation.Api/Projeto.Presentation.Api.csproj
+++ b/ProjetoAPI02/Projeto.Presentation.Api/Projeto.Presentation.Api.csproj
@@ -5,11 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Projeto.CrossCutting\Projeto.CrossCutting.csproj" />
     <ProjectReference Include="..\Projeto.Infra.Data\Projeto.Infra.Data.csproj" />
   </ItemGroup>
 
